syntax = "proto3";
option go_package = "/rpc_interact";

import "base.proto";

service InteractServiceImpl {
    rpc FavoriteAction(FavoriteActionRequest) returns (FavoriteActionResponse);
    rpc GetFavoriteVideoList(FavoriteListRequest) returns (FavoriteListResponse);
    rpc CommentAction(CommentActionRequest) returns (CommentActionResponse);
    rpc GetCommentList(CommentListRequest) returns (CommentListResponse);
}


//Request message------------------->
message FavoriteActionRequest {
    int64 user_id = 1;
    int64 video_id = 2;
    int32 action_type = 3;
}

message FavoriteListRequest {
    int64 owner_id = 1;
    int64 viewer_id = 2;
}

message CommentActionRequest {
    int64 user_id = 1;
    int64 video_id = 2;
    int32 action_type = 3; 
    string comment_text = 4;
    int64 comment_id = 5;
}

message CommentListRequest {
    int64 video_id = 1;
}

//Response message------------------->

message FavoriteActionResponse {
    int32 status_code = 1;
    string status_msg = 2;
}

message FavoriteListResponse {
    int32 status_code = 1;
    string status_msg = 2;
    repeated Video video_list = 3;
}

message CommentActionResponse {
    Response base_resp = 1;  
    Comment comment = 2; 
}

message CommentListResponse {
    Response base_resp = 1; 
    repeated Comment comment_list = 2;
}